# qml_test

./: CMakeLists.txt  Main.qml  README.md  datahandler.cpp  datahandler.h  image.qrc  main.cpp  main.qml
c++_src/: dxfparser.cpp  dxfparser.h
c++_src/entityProject/: CircleEntity.cpp  CircleEntity.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  ImageEntity.cpp  ImageEntity.h  LineEntity.cpp  LineEntity.h  PolygonEntity.cpp  PolygonEntity.h  RectEntity.cpp  RectEntity.h  Renderer.cpp  Renderer.h  TextEntity.cpp  TextEntity.h
c++_src/fileManager/: Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  FileSerializer.cpp  FileSerializer.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  UndoStack.cpp  UndoStack.h  canvassettings.cpp  canvassettings.h  command.h
image/: 1x.7z
qml_src/: BasicConfig.qml  CustCheckbox.qml  GridCanvas.qml  LeftToolBar.qml  RightBarRect.qml  TableCell.qml  Test.qml  ToolSelectBar.qml  main.qml  qml.qrc
